V1.45 - v1.054
修改的檔案及修改原因 :
 1. application.properties
修改原因：錯誤顯示無法解析 'app.cors.allowed-origins' 屬性值，這表明該屬性可能未在配置文件中定義。
2. WebConfig.java
修改原因：CORS配置可能需要調整，以確保正確讀取和應用允許的源。
3. SecurityConfig.java
修改原因：Spring Security配置可能需要調整，以確保正確處理CORS和其他安全設置。
4. JwtAuthenticationFilter.java
修改原因：JWT過濾器的配置可能需要檢查，以確保它與整體安全配置協調一致。
5. pom.xml
修改原因：可能需要檢查和更新依賴項，特別是與Spring Security和Web相關的依賴，以確保版本兼容性。